Fix transaction update to preserve current user